Design: 메인페이지 카드섹션 스타일링

--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAM B05</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="mainCards">
+      <div class="mainCard">
+        <div class="mainCardImgBox">
+          <div class="profileImageWrap">
+            <img
+              src="./image/cat-5183427_1280.jpg"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+
+          <p class="mainProfileName">Team Member1</p>
+        </div>
+
+        <div class="mainTextBtn">
+          <textarea class="mainTextarea" cols="30" rows="10" readonly>
+테스트</textarea
+          >
+          <button class="mainProfileBtn" onclick="location.href='index.html'">
+            View Profile
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
