--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+   
+    <!-- 연희 -->
+    <div class="macbook-pro">
+      <div class="overlap-group-wrapper">
+        <div class="overlap-group">
+          <div class="rectangle"></div>
+          <div class="div"></div>
+          <div class="rectangle-2"></div>
+          <div class="rectangle-3"></div>
+          <div class="rectangle-4"></div>
+          <div class="rectangle-5"></div>
+          <div class="rectangle-6"></div>
+          <div class="rectangle-7"></div>
+          <div class="rectangle-8"></div>
+          <p class="nevertheless">
+            <span class="text-wrapper"
+              >첫 코딩 강의를 들었을 때, 집중을 못했나 보다 했습니다.<br />두번째는 말이 너무 빨라 놓쳤나 보다
+              했습니다.<br />세번째는 멍~ 했습니다. <br />네번째 때 알았습니다. <br />쉬운길이 아니라는 것을.<br
+            /></span>
+            <span class="span"
+              ><br />Nevertheless, 우리는 해낼 것입니다.<br /><br />-B05 일동-&nbsp;&nbsp;&nbsp;&nbsp;</span
+            >
+          </p>
+          <div class="text-wrapper-2">“코딩쉽지않조”</div>
+          <div class="NE-VER-THE-LESS">NE<br />VER<br />THE<br />LESS</div>
+          <p class="b">
+            <span class="text-wrapper-3">B<br /></span> <span class="text-wrapper-4">0<br />5</span>
+          </p>
+          <div class="rectangle-9"></div>
+          <div class="rectangle-10"></div>
+          <div class="rectangle-11"></div>
+          <div class="text-wrapper-5">우리 조 이름은?</div>
+          <div class="text-wrapper-6">우리의 목표는?</div>
+          <div class="text-wrapper-7">우리 팀원수는?</div>
+        </div>
+      </div>
+    </div>
+   <!-- 연희 -->
+   
+   
+   
+   
     <div class="mainCards">
       <div class="mainCard">
         <div class="mainCardImgBox">
