--- a/index.html
+++ b/index.html
@@ -1,96 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TEAM B05</title>
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./js/main.js"></script>
-    </head>
-    <body>
-        <!-- 운성 -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TEAM B05</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/main.js"></script>
+  </head>
+  <body>
+    <!-- 운성 -->
+    <div class="header">
+      <div class="logo"></div>
+      <div class="gnb">
+        <li><a onclick="scrollToElement('#이동')">코딩 쉽지 않조!</a></li>
+        <li>
+          <a onclick="scrollToElement('#이동2', 'start')">팀 소개</a>
+        </li>
+        <li>
+          <a onclick="scrollToElement('#이동2', 'start')">팀원 소개</a>
+        </li>
+      </div>
+    </div>
+    <!-- 운성 -->
 
-        <div class="header">
-            <div class="테두리">
-                <div class="사진"></div>
-                <div class="메뉴">
-                    <a onclick="scrollToElement('#이동')">menu item1</a>
-                    <a onclick="scrollToElement('#이동2', 'start')">menu item2</a>
-                </div>
-            </div>
-
-            <div id="이동">
-                <div class="구역"><p>팀 슬로건</p></div>
-                <div class="구역"><p>팀 특징</p></div>
-                <div class="구역"><p>팀 목표</p></div>
-            </div>
-
-            <div id="이동2">
-                <h1 class="목록"></h1>
-                <h1 class="목록"></h1>
-                <h1 class="목록"></h1>
-                <h1 class="목록"></h1>
-                <h1 class="목록"></h1>
-                <h1 class="목록"></h1>
-            </div>
+    <!-- 연희 -->
+    <div class="macbook-pro">
+      <div class="overlap-group-wrapper">
+        <div class="overlap-group">
+          <div class="rectangle"></div>
+          <div class="div"></div>
+          <div class="rectangle-2"></div>
+          <div class="rectangle-3"></div>
+          <div class="rectangle-4"></div>
+          <div class="rectangle-5"></div>
+          <div class="rectangle-6"></div>
+          <div class="rectangle-7"></div>
+          <div class="rectangle-8"></div>
+          <p class="nevertheless">
+            <span class="text-wrapper"
+              >첫 코딩 강의를 들었을 때, 집중을 못했나 보다 했습니다.<br />두번째는
+              말이 너무 빨라 놓쳤나 보다 했습니다.<br />세번째는 멍~ 했습니다.
+              <br />네번째 때 알았습니다. <br />쉬운길이 아니라는 것을.<br
+            /></span>
+            <span class="span"
+              ><br />Nevertheless, 우리는 해낼 것입니다.<br /><br />-B05
+              일동-&nbsp;&nbsp;&nbsp;&nbsp;</span
+            >
+          </p>
+          <div class="text-wrapper-2">“코딩쉽지않조”</div>
+          <div class="NE-VER-THE-LESS">NE<br />VER<br />THE<br />LESS</div>
+          <p class="b">
+            <span class="text-wrapper-3">B<br /></span>
+            <span class="text-wrapper-4">0<br />5</span>
+          </p>
+          <div class="rectangle-9"></div>
+          <div class="rectangle-10"></div>
+          <div class="rectangle-11"></div>
+          <div class="text-wrapper-5">우리 조 이름은?</div>
+          <div class="text-wrapper-6">우리의 목표는?</div>
+          <div class="text-wrapper-7">우리 팀원수는?</div>
         </div>
-        <!-- 운성 -->
+      </div>
+    </div>
+    <!-- 연희 -->
 
-        <!-- 연희 -->
-        <div class="macbook-pro">
-            <div class="overlap-group-wrapper">
-                <div class="overlap-group">
-                    <div class="rectangle"></div>
-                    <div class="div"></div>
-                    <div class="rectangle-2"></div>
-                    <div class="rectangle-3"></div>
-                    <div class="rectangle-4"></div>
-                    <div class="rectangle-5"></div>
-                    <div class="rectangle-6"></div>
-                    <div class="rectangle-7"></div>
-                    <div class="rectangle-8"></div>
-                    <p class="nevertheless">
-                        <span class="text-wrapper"
-                            >첫 코딩 강의를 들었을 때, 집중을 못했나 보다 했습니다.<br />두번째는 말이 너무 빨라 놓쳤나
-                            보다 했습니다.<br />세번째는 멍~ 했습니다. <br />네번째 때 알았습니다. <br />쉬운길이
-                            아니라는 것을.<br
-                        /></span>
-                        <span class="span"
-                            ><br />Nevertheless, 우리는 해낼 것입니다.<br /><br />-B05
-                            일동-&nbsp;&nbsp;&nbsp;&nbsp;</span
-                        >
-                    </p>
-                    <div class="text-wrapper-2">“코딩쉽지않조”</div>
-                    <div class="NE-VER-THE-LESS">NE<br />VER<br />THE<br />LESS</div>
-                    <p class="b">
-                        <span class="text-wrapper-3">B<br /></span> <span class="text-wrapper-4">0<br />5</span>
-                    </p>
-                    <div class="rectangle-9"></div>
-                    <div class="rectangle-10"></div>
-                    <div class="rectangle-11"></div>
-                    <div class="text-wrapper-5">우리 조 이름은?</div>
-                    <div class="text-wrapper-6">우리의 목표는?</div>
-                    <div class="text-wrapper-7">우리 팀원수는?</div>
-                </div>
-            </div>
+    <div class="mainCards">
+      <div class="mainCard">
+        <div class="mainCardImgBox">
+          <div class="profileImageWrap">
+            <img
+              src="./image/cat-5183427_1280.jpg"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+
+          <p class="mainProfileName">Team Member1</p>
         </div>
-        <!-- 연희 -->
 
-        <div class="mainCards">
-            <div class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/cat-5183427_1280.jpg" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Team Member1</p>
-                </div>
-
-                <div class="mainTextBtn">
-                    <textarea class="mainTextarea" cols="30" rows="10" readonly>테스트</textarea>
-                    <button class="mainProfileBtn" onclick="location.href='index.html'">View Profile</button>
-                </div>
-            </div>
+        <div class="mainCardsContents">
+          <p>
+            안녕하세요?!?!?!?. 코딩쉽지않조의 누구누구입니다. <br />
+            밑의 버튼은 이동 버튼입니다. 열심히 하겠습니다. 텍스트 텍스트 텍스트
+            이정도는 써야 되겠다..
+          </p>
+          <a class="btn default" href="./sparta/index.html"
+            >팀원에게 바로가기</a
+          >
         </div>
-    </body>
+      </div>
+      <!-- 두번째 카드 st -->
+      <div class="mainCard">
+        <div class="mainCardImgBox">
+          <div class="profileImageWrap">
+            <img
+              src="./image/cat-5183427_1280.jpg"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+
+          <p class="mainProfileName">Team Member1</p>
+        </div>
+
+        <div class="mainCardsContents">
+          <p>
+            안녕하세요?!?!?!?. 코딩쉽지않조의 누구누구입니다. <br />
+            밑의 버튼은 이동 버튼입니다. 열심히 하겠습니다. 텍스트 텍스트 텍스트
+            이정도는 써야 되겠다..
+          </p>
+          <a class="btn default" href="./sparta/index.html"
+            >팀원에게 바로가기</a
+          >
+        </div>
+      </div>
+      <!-- 두번째 카드 nd -->
+    </div>
+  </body>
 </html>
