--- a/sparta/index.html
+++ b/sparta/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- 0416 st -->
+    <title>코딩 쉽지 않조 - 팀원 페이지</title>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <!-- 0416 nd -->
+
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
-      * {
-        font-family: "Noto Sans KR", sans-serif;
-      }
+      /* style 전체 작업 완료 후 style.css에 넣어주세요. */
       .mytxt {
         width: 360px;
         height: 315px;
         background-color: green;
         text-align: center;
 
-        margin: 20px right 20px auto;   
+        margin: 20px right 20px auto;
       }
     </style>
   </head>
