--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
         <!-- 운성 -->
         <div class="header">
             <div class="logo"></div>
-            <div class="gnb">
-                <li><a onclick="scrollToElement('#이동')">코딩 진짜 쉽지 않조</a></li>
-                <li>
-                    <a onclick="scrollToElement('#이동2', 'start')">팀 소개</a>
-                </li>
-                <li>
-                    <a onclick="scrollToElement('#이동2', 'start')">팀원 소개</a>
-                </li>
+            <div class="menu">
+                <span class="title">코딩 쉽지 않조!</span>
+                <a onclick="scrollToElement('#go')">팀 소개</a>
+                <a onclick="scrollToElement('#go2', 'start')">팀원 소개</a>
             </div>
         </div>
         <!-- 운성 -->
