--- a/sparta/현우.html
+++ b/sparta/현우.html
@@ -9,30 +9,38 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!-- 0416 nd -->
 
-    <style>
-      /* style 전체 작업 완료 후 style.css에 넣어주세요. */
-      .mytxt {
-        width: 360px;
-        height: 315px;
-        background-color: green;
-        text-align: center;
 
-        margin: 20px right 20px auto;
-      }
-    </style>
   </head>
   <body>
-    <div class="mytxt">
-      <h2>나는 제목입니다</h2>
-    </div>
-    <div class="mytxt">
-      <h2>나는 제목입니다</h2>
-    </div>
-    <div class="mytxt">
-      <h2>나는 제목입니다</h2>
-    </div>
-    <div class="mytxt">
-      <h2>나는 제목입니다</h2>
+    <div class="container-wrapper">
+      <div class="container">
+        <div class="item">
+          <h2>나는 제목입니다</h2>
+          <div>
+            <h5>나는 내용입니다</h5>
+          </div>
+        </div>
+        <div class="item">
+          <h2>나는 제목입니다</h2>
+          <div>
+            <h5>나는 내용입니다</h5>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="item">
+          <h2>나는 제목입니다</h2>
+          <div>
+            <h5>나는 내용입니다</h5>
+          </div>
+        </div>
+        <div class="item">
+          <h2>나는 제목입니다</h2>
+          <div>
+            <h5>나는 내용입니다</h5>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
