--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <!-- 로고있는 곳 네모 -->
            <div class="withoutwave">
-               <h1 class="logo">B05</h1>
+               <h1 class="bo5">B05</h1>
    
    
        
@@ -75,7 +75,7 @@
    
    
        </div>
-        <!-- 연희 -->
+        <!-- 연희 끝 -->
 
         <div class="mainCards">
             <div id="firstMainCard" class="mainCard">
