--- a/sparta/윤서.html
+++ b/sparta/윤서.html
@@ -13,10 +13,9 @@
       rel="stylesheet"
     />
     <style>
-      @import url("../css/style.css");
+      @import url("../css/윤서.css");
     </style>
   </head>
-
   <body>
     <div class="header">
       <div class="logo"></div>
