--- a/sparta/윤서.html
+++ b/sparta/윤서.html
@@ -26,13 +26,8 @@
       </div>
     </div>
     <div
-      style="
-        padding-top: 200px;
-        display: flex;
-        justify-content: space-around;
-        gap: 30px;
-        align-items: center;
-      "
+      class="mainbox"
+
     >
       <div class="mypostingbox" style="float: left">
         <div class="myimg">
