--- a/sparta/hyun.html
+++ b/sparta/hyun.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <style>
-      @import url("../css/hyun.css");
+      @import url("../css/sparta.css");
     </style>
   </head>
   <body>
