--- a/sparta/hyun.html
+++ b/sparta/hyun.html
@@ -25,10 +25,7 @@
         <a onclick="scrollToElement('#firstMainCard', 'start')">팀원 소개</a>
       </div>
     </div>
-    <div
-      class="mainbox"
-
-    >
+    <div class="mainbox">
       <div class="mypostingbox" style="float: left">
         <div class="myimg">
           <img src="" />
@@ -45,21 +42,21 @@
       <div class="container-wrapper" style="float: right">
         <div class="container">
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>나의 장점</h2>
             <div>
-              <h5>나는 내용입니다</h5>
+              <h3>나는 내용입니다</h3>
             </div>
           </div>
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>나의 MBTI</h2>
             <div>
-              <h5>나는 내용입니다</h5>
+              <h3>나는 내용입니다</h3>
             </div>
           </div>
         </div>
         <div class="container">
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>나의 스타일, 협업스타일</h2>
             <div>
               <h5>나는 내용입니다</h5>
             </div>
