--- a/sparta/hyun.html
+++ b/sparta/hyun.html
@@ -37,21 +37,21 @@
         <div class="moge">
           <h2>📢MBTI : INFP</h2>
           <div class="ub">-------------------------</div>
-          <h2>✉️ jungilbung@naver.com</h2>
+          <h3>✉️ jungilbung@naver.com</h3>
           <div class="ub">-------------------------</div>
-          <h2>🐈‍⬛ https://github.com/junghyunwoo02</h2>
+          <h3>🐈‍⬛ https://github.com/junghyunwoo02</h3>
         </div>
       </div>
       <div class="container-wrapper" style="float: right">
         <div class="container">
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>나의 장점</h2>
             <div>
               <h3>나는 내용입니다</h3>
             </div>
           </div>
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>내가 설명하는 나</h2>
             <div>
               <h3>나는 내용입니다</h3>
             </div>
@@ -59,13 +59,13 @@
         </div>
         <div class="container">
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>나의 스타일과 협업스타일</h2>
             <div>
               <h3>나는 내용입니다</h3>
             </div>
           </div>
           <div class="item">
-            <h2>나는 제목입니다</h2>
+            <h2>하고 싶은 말</h2>
             <div>
               <h3>나는 내용입니다</h3>
             </div>
