--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <body>
         <!-- 운성 -->
         <div class="header">
+            <div class="logo"></div>
             <div class="menu">
                 <span class="title" onclick="scrollToTop()">코딩 쉽지 않조!</span>
                 <a onclick="scrollToElement('#teamName')">팀 소개</a>
                 <a onclick="scrollToElement('#firstMainCard', 'start')">팀원 소개</a>
             </div>
         </div>
-
         <!-- 운성 -->
         <!-- 연희 -->
         <div class="main">
