--- a/index.html
+++ b/index.html
@@ -1,197 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TEAM B05</title>
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./js/main.js"></script>
-    </head>
-    <body>
-        <!-- 운성 -->
-        <div class="header">
-            <div class="logo"></div>
-            <div class="menu">
-                <span class="title" onclick="scrollToTop()">코딩 쉽지 않조!</span>
-                <a onclick="scrollToElement('#teamName')">팀 소개</a>
-                <a onclick="scrollToElement('#firstMainCard', 'start')">팀원 소개</a>
-            </div>
-        </div>
-        <!-- 운성 -->
-        <!-- 연희 -->
-        <div class="main">
-            <!-- 로고있는 곳 네모 -->
-            <div class="withoutwave">
-                <h1 class="bo5">B05</h1>
-            </div>
-
-            <button id="teamName" class="introbtn0" type="button">우리 조의 이름은?</button>
-            <button class="introbtn1" type="button">우리 조의 이름은?</button>
-            <button class="introbtn2" type="button">우리 조의 이름은?</button>
-
-            <!--물결-->
-            <div>
-                <svg
-                    class="waves"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    viewBox="0 24 150 28"
-                    preserveAspectRatio="none"
-                    shape-rendering="auto"
-                >
-                    <defs>
-                        <path
-                            id="gentle-wave"
-                            d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
-                        />
-                    </defs>
-                    <g class="parallax">
-                        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
-                        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-                        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-                        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-                    </g>
-                </svg>
-            </div>
-            <!--물결 끝-->
-        </div>
-
-        <!--맨 밑-->
-        <div class="content flex">
-            <p>코딩쉽지않조 nevertheless</p>
-        </div>
-        <!-- 연희 끝 -->
-
-        <!--카드섹션 시작-->
-        <div class="mainCards">
-            <!-- <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/heejin.jpeg" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Heejin Gang</p>
-                </div>
-
-                <div class="mainCardsContents">
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
-            </div> -->
-            <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                  <p class="mainProfileMbti">ENTP</p>
-                    <div class="profileImageWrap">
-                      <img src="./image/minyoung.png" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Minyoung Kuk</p>
-                    <div class="mainCardsContact">
-                      <ul>
-                        <li>이메일: uperxwall@gamil.com</li>
-                        <li>블로그: uperxwall@gamil.com</li>
-                        <li>깃헙브: uperxwall@gamil.com</li>
-                      </ul>
-                    </div>
-                </div>
-
-                <div class="mainCardsContents">
-
-                  <div class="">
-                    <p class="title" style="padding-bottom: 20px; text-align: right;background-color: #f5faffc9;">
-                      팀 미니 프로젝트 - 코딩쉽지않조
-                    </p>
-                    <div class="mainCardsTxtBox">
-                      <div>
-                        <p class="title">저의 장점은요?</p>
-                        <ul>
-                          <li>· 안되는게 어딨어요? 될때까지 합니다!</li>
-                          <li>· 퍼블리셔 경력!</li>
-                          <li>· 배려심!</li>
-                        </ul>
-                      </div>
-                      <div>
-                        <p class="title">저의 업무스타일이요?</p>
-                        <ul>
-                          <li>· 협업에는 소통이 중요해요!</li>
-                          <li>· 맡은 작업은 끝까지 해내요!</li>
-                          <li>· 다른 팀원의 어려운 부분을 돕고 싶어요!</li>
-                          <li>· 저도 모르면 잘 물어봅니다!</li>
-                        </ul>
-                      </div>
-
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
-            </div>
-            <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/heejin.jpeg" alt="mainCardImage" class="mainCardImg" />
-
-                    </div>
-                  </div>
-                    
-                    
-                    <a class="btn default" href="./sparta/index.html">응원하기</a>
-                </div>
-
-            </div>                    
-        </div> 
-         <!--카드섹션 끝-->       
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TEAM B05</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/main.js"></script>
+  </head>
+  <body>
+    <!-- 운성 -->
+    <div class="header">
+      <div class="logo"></div>
+      <div class="menu">
+        <span class="title" onclick="scrollToTop()">코딩 쉽지 않조!</span>
+        <a onclick="scrollToElement('#teamName')">팀 소개</a>
+        <a onclick="scrollToElement('#firstMainCard', 'start')">팀원 소개</a>
       </div>
     </div>
+    <!-- 운성 -->
+    <!-- 연희 -->
+    <div class="main">
+      <!-- 로고있는 곳 네모 -->
+      <div class="withoutwave">
+        <h1 class="bo5">B05</h1>
+      </div>
 
+      <button id="teamName" class="introbtn0" type="button">
+        우리 조의 이름은?
+      </button>
+      <button class="introbtn1" type="button">우리 조의 이름은?</button>
+      <button class="introbtn2" type="button">우리 조의 이름은?</button>
 
-                <div class="mainCardsContents">
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
+      <!--물결-->
+      <div>
+        <svg
+          class="waves"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 24 150 28"
+          preserveAspectRatio="none"
+          shape-rendering="auto"
+        >
+          <defs>
+            <path
+              id="gentle-wave"
+              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+            />
+          </defs>
+          <g class="parallax">
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="0"
+              fill="rgba(255,255,255,0.7"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="3"
+              fill="rgba(255,255,255,0.5)"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="5"
+              fill="rgba(255,255,255,0.3)"
+            />
+            <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+          </g>
+        </svg>
+      </div>
+      <!--물결 끝-->
+    </div>
+
+    <!--맨 밑-->
+    <div class="content flex">
+      <p>코딩쉽지않조 nevertheless</p>
+    </div>
+    <!-- 연희 끝 -->
+
+    <!--카드섹션 시작-->
+    <div class="mainCards">
+      <div id="firstMainCard" class="mainCard">
+        <div class="mainCardImgBox">
+          <p class="mainProfileMbti">ENTP</p>
+          <div class="profileImageWrap">
+            <img
+              src="./image/minyoung.png"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+
+          <p class="mainProfileName">Minyoung Kuk</p>
+          <div class="mainCardsContact">
+            <ul>
+              <li>이메일: uperxwall@gamil.com</li>
+              <li>블로그: uperxwall@gamil.com</li>
+              <li>깃헙브: uperxwall@gamil.com</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="mainCardsContents">
+          <div class="mainCardsContentsCon">
+            <!-- <p class="title" style="text-align: right"> -->
+            <!-- 팀 미니 프로젝트 - 코딩쉽지않조 -->
+            <img
+              src="https://ifh.cc/g/MtBP8X.png"
+              class="teamlogo"
+              alt="teamlogo"
+            />
+            <!-- </p> -->
+            <div class="mainCardsTxtBox">
+              <div>
+                <p class="title">저의 장점은요?</p>
+                <ul>
+                  <li>· 안되는게 어딨어요? 될때까지 합니다!</li>
+                  <li>· 퍼블리셔 경력!</li>
+                  <li>· 배려심!</li>
+                </ul>
+              </div>
+              <div>
+                <p class="title">저의 업무스타일이요?</p>
+                <ul>
+                  <li>· 협업에는 소통이 중요해요!</li>
+                  <li>· 맡은 작업은 끝까지 해내요!</li>
+                  <li>· 다른 팀원의 어려운 부분을 돕고 싶어요!</li>
+                  <li>· 저도 모르면 잘 물어봅니다!</li>
+                </ul>
+              </div>
             </div>
-            <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/heejin.jpeg" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Heejin Gang</p>
-                </div>
-
-                <div class="mainCardsContents">
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
-            </div>
-            <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/heejin.jpeg" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Heejin Gang</p>
-                </div>
-
-                <div class="mainCardsContents">
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
-            </div>
-            <div id="firstMainCard" class="mainCard">
-                <div class="mainCardImgBox">
-                    <div class="profileImageWrap">
-                        <img src="./image/heejin.jpeg" alt="mainCardImage" class="mainCardImg" />
-                    </div>
-
-                    <p class="mainProfileName">Heejin Gang</p>
-                </div>
-
-                <div class="mainCardsContents">
-                    <p>안녕하세요? 코딩쉽지않조의 강희진입니다 <br /></p>
-                    <a class="btn default" href="./sparta/index.html">팀원에게 바로가기</a>
-                </div>
-            </div>
+          </div>
+          <a class="btn default" href="./sparta/index.html">응원하기</a>
         </div>
         <!--카드섹션 끝-->
-    </body>
-
+      </div>
+    </div>
+  </body>
 </html>
