--- a/index.html
+++ b/index.html
@@ -95,9 +95,21 @@
           <p class="mainProfileName">Minyoung Kuk</p>
           <div class="mainCardsContact">
             <ul>
-              <li>이메일: uperxwall@gamil.com</li>
-              <li>블로그: uperxwall@gamil.com</li>
-              <li>깃헙브: uperxwall@gamil.com</li>
+              <li>
+                <a href="mailto: uperxwall@gamil.com"
+                  >이메일: uperxwall@gamil.com</a
+                >
+              </li>
+              <li>
+                <a href="https://minyoungkuk.github.io/TIL/"
+                  >블로그: https://minyoungkuk.github.io/TIL/</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/minyoungKuk"
+                  >깃헙브: https://github.com/minyoungKuk</a
+                >
+              </li>
             </ul>
           </div>
         </div>
