--- a/index.html
+++ b/index.html
@@ -148,6 +148,75 @@
         </div>
         <!--카드섹션 끝-->
       </div>
+
+      <!-- sss -->
+      <div id="firstMainCard" class="mainCard">
+        <div class="mainCardImgBox">
+          <p class="mainProfileMbti">ENTP</p>
+          <div class="profileImageWrap">
+            <img
+              src="./image/minyoung.png"
+              alt="mainCardImage"
+              class="mainCardImg"
+            />
+          </div>
+
+          <p class="mainProfileName">Minyoung Kuk</p>
+          <div class="mainCardsContact">
+            <ul>
+              <li>
+                <a href="mailto: uperxwall@gamil.com"
+                  >이메일: uperxwall@gamil.com</a
+                >
+              </li>
+              <li>
+                <a href="https://minyoungkuk.github.io/TIL/"
+                  >블로그: https://minyoungkuk.github.io/TIL/</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/minyoungKuk"
+                  >깃헙브: https://github.com/minyoungKuk</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="mainCardsContents">
+          <div class="mainCardsContentsCon">
+            <!-- <p class="title" style="text-align: right"> -->
+            <!-- 팀 미니 프로젝트 - 코딩쉽지않조 -->
+            <img
+              src="https://ifh.cc/g/MtBP8X.png"
+              class="teamlogo"
+              alt="teamlogo"
+            />
+            <!-- </p> -->
+            <div class="mainCardsTxtBox">
+              <div>
+                <p class="title">저의 장점은요?</p>
+                <ul>
+                  <li>· 안되는게 어딨어요? 될때까지 합니다!</li>
+                  <li>· 퍼블리셔 경력!</li>
+                  <li>· 배려심!</li>
+                </ul>
+              </div>
+              <div>
+                <p class="title">저의 업무스타일이요?</p>
+                <ul>
+                  <li>· 협업에는 소통이 중요해요!</li>
+                  <li>· 맡은 작업은 끝까지 해내요!</li>
+                  <li>· 다른 팀원의 어려운 부분을 돕고 싶어요!</li>
+                  <li>· 저도 모르면 잘 물어봅니다!</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <a class="btn default" href="./sparta/index.html">응원하기</a>
+        </div>
+        <!--카드섹션 끝-->
+      </div>
     </div>
   </body>
 </html>
