--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
             <div class="yhcard">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBmzocrJNdVO9aKdgIhUL8b-_xjEfi5-vvSSz6p4Pv6wN9nYnUZXZ4HxGWE3G3DwFTs9Y&usqp=CAU"
-                    class="card-img-top" alt="...">
+                    class="card-img-top1" alt="...">
                 <div class="yhc-body">
                     <h5 class="yhc-title">Our Goal</h5>
                     <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
@@ -82,7 +82,7 @@
         <div>
             <div class="yhcard">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh9RCRWmDc_sLZ7TirH-FtY98nE40K6M0dqA&s"
-                    class="card-img-top" alt="...">
+                    class="card-img-top2" alt="...">
                 <div class="yhc-body">
                     <h5 class="yhc-title">Our Character</h5>
                     <p class="yhc-text">This is a longer card with supporting text below as a natural lead-in to
