--- a/sparta/yunseo.html
+++ b/sparta/yunseo.html
@@ -44,8 +44,8 @@
             <div>
               <h3>
                 1.임기응변이 좋습니다<br /><br />
-                2. 적응이 빠릅니다<br /><br />
-                3.요리를 잘합니다
+                2.적응이 빠릅니다<br /><br />
+                3.외국어를 잘합니다
               </h3>
             </div>
           </div>
@@ -68,9 +68,10 @@
             <h2>나의 스타일, 협업스타일</h2>
             <div>
               <h3>
-                아직까지 저의 스타일이라고<br />
-                말할만한 것이 없다고 생각합니다<br /><br />
-                하지만 저는 서로의 의견을 존중하며<br />
+                모르는게 있으면 항상 질문하고<br />
+                제가 맡은 부분에 있어서는<br />
+                끝까지 책임지고 합니다!<br /><br />
+                서로의 의견을 존중하며<br />
                 상호간의 대화가 통하기만 한다면<br />
                 그걸로 충반하다고 생각합니다.
               </h3>
