--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="main">
       <!-- 로고있는 곳 네모 -->
       <div class="withoutwave">
+        <h1 class="ourgoal1">Nevertheless</h1>
         <h1 class="ourgoal">"우린 해내죠"</h1>
       </div>
 
@@ -45,7 +46,7 @@
               xlink:href="#gentle-wave"
               x="48"
               y="0"
-              fill="rgba(255,255,255,0.7"
+              fill="rgba(255,255,255,0.7)"
             />
             <use
               xlink:href="#gentle-wave"
@@ -69,7 +70,7 @@
     <!--맨 밑-->
     <div class="ourname">
       <div class="content flex">
-        <p>"코딩쉽지않조 nevertheless"</p>
+        <p></p>
       </div>
     </div>
 
