--- a/guestbook/guest.html
+++ b/guestbook/guest.html
@@ -49,8 +49,8 @@
                     onclick="alert('등록 완료!')"
                 />
             </div>
-            
         </div>
+        <hr class="hr" width="90%" color="lightgray" />
 
 
         <div class="ournote" style="width: 50rem;">
