--- a/guestbook/guest.html
+++ b/guestbook/guest.html
@@ -19,9 +19,8 @@
     <div class="ex">
       <div class="between">
         <input type="text" name="id" placeholder="닉네임" />
-      </div>
-      <div class="input_layout">
-        <input class="" type="text" placeholder="닉네임" />
+      
+        <input class="create" type="text" placeholder="test" />
 
         <input
           class="btn"
